--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,4 +26,5 @@ set -g status-fg white
 # Highlight active window
 set-window-option -g window-status-current-bg red
 
-
+set -g default-shell /bin/bash --login
+set -g default-command /bin/bash --login
