--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,3 @@
-# Rebinds prefix
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
-
 # Sets vim keymode
 set -g status-keys vi
 setw -g mode-keys vi
@@ -24,7 +19,5 @@ set -g status-bg black
 set -g status-fg white
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
-
-set -g default-shell /bin/bash --login
-set -g default-command /bin/bash --login
+set-window-option -g window-status-current-bg colour165
+set -g default-terminal "screen-256color"
