Updated vim, tmux, and i3 configs; added mutt config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,5 +19,5 @@ set -g status-bg black
 set -g status-fg white
 
 # Highlight active window
-set-window-option -g window-status-current-bg colour165
+set -g window-status-current-style bg=colour165
 set -g default-terminal "screen-256color"
