--- a/.i3/config
+++ b/.i3/config
@@ -6,7 +6,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Roboto Mono Regular 9
 
 # i3 gaps settings
 for_window [class="^.*"] border pixel 0
@@ -17,7 +17,7 @@ gaps outer 15
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal 
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -126,6 +126,8 @@ mode "$mode_system" {
 
 bindsym $mod+Pause mode "$mode_system"
 
+bindsym $mod+z exec "/bin/bash .local/bin/emoji"
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -156,6 +158,7 @@ bindsym $mod+r mode "resize"
 bindsym XF86AudioRaiseVolume exec ponymix increase 5
 bindsym XF86AudioLowerVolume exec ponymix decrease 5
 bindsym XF86AudioMute exec ponymix toggle
+bindsym XF86AudioMicMute exec amixer sset Capture toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -165,5 +168,5 @@ bar {
 }
 
 # sets background image for workspaces
-exec --no-startup-id feh --bg-scale /home/dick/Pictures/bg_audree.jpg
+exec --no-startup-id xsetroot -solid "#000000"
 
