--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ bind | split-window -h
 bind - split-window -v
 
 # Set status bar
-set -g status-bg black
+set -g status-bg '#1e1e1f'
 set -g status-fg white
 
 # Highlight active window
