--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,12 @@ bind ^A select-pane -t :.+
 bind | split-window -h
 bind - split-window -v
 
+# Resize the current pane using Alt + direction
+bind -n M-k resize-pane -U 5
+bind -n M-j resize-pane -D 5
+bind -n M-h resize-pane -L 5
+bind -n M-l resize-pane -R 5
+
 # Set status bar
 set -g status-bg '#1e1e1f'
 set -g status-fg white
