--- a/templates/.config/tmux/tmux.conf
+++ b/templates/.config/tmux/tmux.conf
@@ -20,8 +20,11 @@ bind -n M-j resize-pane -D 5
 bind -n M-h resize-pane -L 5
 bind -n M-l resize-pane -R 5
 
+set -g window-style 'bg=#282a36'
+set -g window-active-style 'bg=#282a36'
+
 # Set status bar
-set -g status-bg '#1e1e1f'
+set -g status-bg '#282a36'
 set -g status-fg white
 
 # Highlight active window
