--- a/templates/.config/tmux/tmux.conf
+++ b/templates/.config/tmux/tmux.conf
@@ -4,7 +4,7 @@ setw -g mode-keys vi
 
 # Rebinds config reload
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # Rebinds pane cycling
 unbind ^A
