--- a/templates/.config/tmux/tmux.conf
+++ b/templates/.config/tmux/tmux.conf
@@ -43,4 +43,4 @@ set -g @plugin 'dracula/tmux'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.config/tmux/plugins/tpm/tpm'
