--- a/templates/.config/tmuxinator/example-rails.yml
+++ b/templates/.config/tmuxinator/example-rails.yml
@@ -1,4 +1,4 @@
-# /Users/dickdavis/.config/tmuxinator/na-app.yml
+# /Users/dickdavis/.config/tmuxinator/example-rails.yml
 
 name: example-rails
 root: ~/workspace
@@ -12,7 +12,7 @@ root: ~/workspace
 # Project hooks
 
 # Runs on project start, always
-# on_project_start: command
+on_project_start: docker compose up
 
 # Run on project start, the first time
 # on_project_first_start: command
@@ -21,7 +21,7 @@ root: ~/workspace
 # on_project_restart: command
 
 # Run on project exit ( detaching from tmux session )
-# on_project_exit: command
+on_project_exit: docker compose down
 
 # Run on project stop
 # on_project_stop: command
@@ -58,5 +58,5 @@ windows:
   - logs:
       layout: tiled
       panes:
-        - docker compose up
+        - docker compose logs -f
         - bin/dev
